* 1.0.4

* Add initial display:none to sheet forms so they won't flash on the page during load
* Remove stray console.log in syncing causing Camino to fail
* Add link to reset your OpenID Address from your profile
* Fix nil error when deleting users, sweep cache when users are updated.
* fix error with date/time format when syncin

* 1.0.3

* Add a new favicon
* Beef up the initial bootstrapping task.
* add deployment helper task.
* Fix bug with access file generation

* 1.0.2

* send valid ATOM feeds.
* update open_id rails plugin so that urls with '-'s are allowed.
* fixed a harsh bug with the sheets: http://forum.activereload.net/forums/8/topics/93

* 1.0.1

* Fix rare bug when viewing history of path that doesn't exist anymore
* Sweep the repository's cache when updating the access permissions.
* fix rare bug where FileUtils#install would clash with the #install route when running rake (only on textdrive)

* 1.0.0 RC

* Fix footer in IE 7 to align to left side of page
* Fix bookmark line height in IE 7, add ie specific style sheet curbstomp.css
* Fix permission form in IE 7.  Do not allow it to duplicate events on the add/subtract buttons.
* fix changeset/public reloading issues
* allow configurable session options
* lots of tweaks for repo admins accessing admin functions
* allow repo admins to add access permissions
* better error messages for db config errors in import and post-commit tasks
* Support user-specific timezones with javascript
* Add fragment caching.

* 0.9.1 (beta)

* fix js cache issues
* add more svn/ruby requires (for compatibility w/ svn 1.3)
* fix old @error usage
* freeze open id gems
* initialize Warehouse.domain to an empty string
* show extra debug info for invalid Warehouse.domain
* remove email footer
* require email and svn login at least, unless the account was created with open id.
* fix bugs relating to giving members access to the root of a repo